Fixed some issues, one with the button styles being inconsistent in browsers, the other, MS Edge wasn't clipping text

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,25 @@
     text-anchor: middle;
 }
 
+.lu-popup button {
+    align-items: flex-start;
+    text-align: center;
+    cursor: default;
+    color: buttontext;
+    background-color: buttonface;
+    box-sizing: border-box;
+    padding: 2px 6px 3px;
+    border: 2px outset buttonface;
+    align-items: flex-start;
+    text-align: center;
+    cursor: default;
+    color: buttontext;
+    background-color: buttonface;
+    box-sizing: border-box;
+    padding: 2px 6px 3px;
+    border: 2px outset buttonface;
+}
+
 .lu-popup .selectionTable {
     background: white;
     overflow-x: auto;
